Update Design Report

--- a/Final Documentation/Design Report/2019_ECECapstone_Team21.tex
+++ b/Final Documentation/Design Report/2019_ECECapstone_Team21.tex
@@ -142,9 +142,22 @@ We quickly found that none of these tasks  are easy or simple. The selection, bu
 \pagebreak
 
 \section{Project Overview}
-\blindtext
+\subsection{Background}
+SightLine Applications has developed a precision visual landing algorithm that provides an excellent set of benefits:
+\begin{itemize}
+\item Works in degraded and denied GPS environments – Safety and reliability
+\item	Reduces operator training and landing phase complexity.
+\item	Provides detection functions for landing zone safety - detect people, animals, or objects from entering the landing zone
+\item   Provides a rich set of telemetry for flight controllers.  30 Hz data with range, XY offsets, relative azimuth, etc.
+\item	Supports landing on moving platforms - ground vehicles, marine.
+\item	Is not impacted by bright sun or low light conditions.
+\item	Can be used with Thermal (IR) cameras as well as visible (EO) cameras
+\item	Effective range of operation (distance to target) only limited by the size of the landing pattern used
+\end{itemize}
+
 \subsection{Problem Definition}
-\blindtext
+Integration of the SightLine Landing Aid for end users is problematic.  Often drone operators want to just “plug in” a component and fly their mission.  Installing software components is acceptable, but any requirement for programming is a barrier to entry or a complete show stopper.  Various cables, power, and other electrical connectivity issues are also difficult for vehicle integrators.  Rugged or at least robust mechanical enclosures, easy mounting, and environmental reliability are equally important.  Lastly, choice of optical system (camera) for the greatest range has cause adoption delays in that it has been a decision left to the integrator. Recognizing the needs from the end-users and the current developed benefits, Sightline wants to develop a plug and play precision landing aid for UAVs and expect that this new project will be highly valuable to a wide range of multi-copter integrators.
+
 \subsection{Solution(10,000ft view)}
 \blindtext
 
