--- a/Final Documentation/Design Report/2019_ECECapstone_Team21.tex
+++ b/Final Documentation/Design Report/2019_ECECapstone_Team21.tex
@@ -59,26 +59,10 @@
 	%	Author(s)
 	%------------------------------------------------
 	
-%	\begin{minipage}{0.4\textwidth}
-%		\begin{flushleft}
-%			\large
-%			\textit{By:}\\
-%		 \textsc{Kimball S. Davis} % Your name
-%		\end{flushleft}
-%	\end{minipage}
-%	~
-%	\begin{minipage}{0.4\textwidth}
-%		\begin{flushright}
-%			\large
-%			\textit{Professor of Electrical \& Computer Engineering}\\
-%		 \textsc{Professor Branimir Pejcinovic, Ph.D.} % Supervisor's name
-%		\end{flushright}
-%	\end{minipage}
-	
-	% If you don't want a supervisor, uncomment the two lines below and comment the code above
+
 	{\Large\textit{Authors:}}\\
- 	\Large\textsc{Tai Pham}\\
-	 \Large\textsc{Kimball S. Davis} % Your name
+ 	\Large\textsc{Kimball S. Davis}\\
+	 \Large\textsc{Tai Pham} % Your name
 	
 	%------------------------------------------------
 	%	Date
@@ -111,7 +95,7 @@ SightLine Applications has developed a precision visual landing aid for UAV's. T
 \item Connectivity issues with a wide range of cameras. 
 \item Communication issues with a wide range of filght controller hardware and software.
 \end{enumerate} 
-Currently the end user selects a camera to be used with the SightLine processing hardware. A wide range of cameras must be supported, and custom A/B boards must be designed for each one to interface with the SightLine hardware. Each of these A/B boards can have cable, power, and electrical connectivity issues that are problematic for the end user.
+Currently the end user selects a camera to be used with the SightLine processing hardware. A wide range of cameras must be supported, and custom AB boards must be designed for each one to interface with the SightLine hardware. Each of these AB boards can have cable, power, and electrical connectivity issues that are problematic for the end user.
 There is also a wide range of flight controller hardware and software, each with a myriad of different communication protocols. Installing software components to facillitate this communication is fine for the end user, but if any programming needs to be done this is usually a complete show stopper. The proposed solution to these problems is to develop an all in one unit with plug and play capabilities that can be directly connected to a consumer level flight controller. By doing so camera connectivity and selection problems are eliminated, and communication and software deployment are made much easier for the end user.
  \\
 The project is divided into three sections:
@@ -121,7 +105,7 @@ The project is divided into three sections:
  \item Research and development of documentation and software installers to meet plug and play expectations using QGroundControl flight control and mission planning software
 \end{enumerate}
 
-We quickly found that none of these tasks  are easy or simple. The selection, build, and testing of a custom quadcopter is a complicated task with many variables. GPS signal degradation made indoor flight tests impossible, and safe outdoor testing locations were hard to find. We did succseffully autonomously fly the built drone using QGroundcontrol mission planning. A camera board, The SLA1500CAM was designed and tested. 
+We quickly found that none of these tasks  are easy or simple. The selection, build, and testing of a custom quadcopter is a complicated task with many variables. GPS signal degradation made indoor flight tests impossible, and safe outdoor testing locations were hard to find. We did successfully build, and autonomously fly the Pixhawk 4 controlled quadcopter using QGroundControl mission planning software. A camera for the SightLine hardware was designed utilizing an AR0134CS optical sensor. The camera board was also designed to provide power distribution, and facilitate communication between the Pixhawk 4 flight controller and the SightLine hardware.
 
 *Insert Hardware Test Results Here*
 
@@ -158,7 +142,7 @@ SightLine Applications has developed a precision visual landing algorithm that p
 \subsection{Problem Definition}
 Integration of the SightLine Landing Aid for end users is problematic.  Often drone operators want to just “plug in” a component and fly their mission.  Installing software components is acceptable, but any requirement for programming is a barrier to entry or a complete show stopper.  Various cables, power, and other electrical connectivity issues are also difficult for vehicle integrators.  Rugged or at least robust mechanical enclosures, easy mounting, and environmental reliability are equally important.  Lastly, choice of optical system (camera) for the greatest range has cause adoption delays in that it has been a decision left to the integrator. Recognizing the needs from the end-users and the current developed benefits, Sightline wants to develop a plug and play precision landing aid for UAVs and expect that this new project will be highly valuable to a wide range of multi-copter integrators.
 
-\subsection{Solution(10,000ft view)}
+\subsection{Solution}
 
 The project is divided into three sections:
 \begin{enumerate}
@@ -167,12 +151,10 @@ The project is divided into three sections:
  \item Research and development of documentation and software installers to meet plug and play expectations using QGroundControl flight control and mission planning software
 \end{enumerate}
 
+ \subsubsection{Quadcopter}
 
 
-    \begin{figure}[H]
-	\centering	
-	\caption{\textit{This is a caption for a blank figure}}	
-	\end{figure}
+
 
 %    \begin{figure}[H]
 %	\centering	
