Update Design Report

--- a/Final Documentation/Design Report/2019_ECECapstone_Team21.tex
+++ b/Final Documentation/Design Report/2019_ECECapstone_Team21.tex
@@ -105,15 +105,15 @@ The project is divided into three sections:
  \item Research and development of documentation and software installers to meet plug and play expectations using QGroundControl flight control and mission planning software
 \end{enumerate}
 
-We quickly found that none of these tasks  are easy or simple. The selection, build, and testing of a custom quadcopter is a complicated task with many variables. GPS signal degradation made indoor flight tests impossible, and safe outdoor testing locations were hard to find. We did successfully build, and autonomously fly the Pixhawk 4 controlled quadcopter using QGroundControl mission planning software. A camera for the SightLine hardware was designed utilizing an AR0134CS optical sensor. The camera board was also designed to provide power distribution, and facilitate communication between the Pixhawk 4 flight controller and the SightLine hardware.
+We quickly found that none of these tasks  are easy or simple. The selection, build, and testing of a custom quadcopter is a complicated task with many variables. GPS signal degradation made indoor flight tests impossible, and safe outdoor testing locations were hard to find. We did successfully build, and autonomously fly the Pixhawk 4 controlled quadcopter using QGroundControl mission planning software. In the meantime, a camera for the SightLine hardware was designed utilizing an AR0134CS optical sensor. The camera board was also designed to provide power distribution, and facilitate communication between the Pixhawk 4 flight controller and the SightLine hardware.
 
-*Insert Hardware Test Results Here*
+*Insert Hardware Test Results summary Here*
 
-*Insert Software Results Here*
+*Insert Software Results summary Here*
 
 *What are the limitations?*
 
-*Future implications of project?*
+*What are the Future implications of the project?*
 
 \pagebreak
 
@@ -144,14 +144,10 @@ Integration of the SightLine Landing Aid for end users is problematic.  Often dr
 
 \subsection{Solution}
 
-The project is divided into three sections:
-\begin{enumerate}
- \item Choosing and building an "off the shelf" quadcopter that uses a Pixhawk 4 flight controller that can be used for testing
- \item Designing a camera based on the On-Semi AR0134CS optical sensor that connects directly to the SightLine hardware, distributes power, and facilitates communication  between the flight controller and SightLine hardware
- \item Research and development of documentation and software installers to meet plug and play expectations using QGroundControl flight control and mission planning software
-\end{enumerate}
 
- \subsubsection{Quadcopter}
+\subsubsection{Quadcopter}
+\subsubsection{Hardware}
+\subsubsection{Software}
 
 
 
