--- a/Final Documentation/Design Report/2019_ECECapstone_Team21.tex
+++ b/Final Documentation/Design Report/2019_ECECapstone_Team21.tex
@@ -91,7 +91,11 @@
 \section*{Abstract}
 
 
-SightLine Applications has developed a precision visual landing aid for UAV's. The Landing Aid supports autonomous landing operations by automatically finding and tracking an easy to place landing pattern. Integration of the SightLine Landing Aid for end users is problematic.  Often drone operators want to just “plug in” a component and fly their mission.  Installing software components is acceptable, but any requirement for programming is a barrier to entry or a complete show stopper.  Various cables, power, and other electrical connectivity issues are also difficult for vehicle integrators.  Rugged or at least robust mechanical enclosures, easy mounting, and environmental reliability are equally important.  Lastly, choice of optical system (camera) for the greatest range has cause adoption delays in that it has been a decision left to the integrator. Recognizing the needs from the end-users, Sightline wants to develop a plug and play precision landing aid for UAVs and expect that this new project will be highly valuable to a wide range of multi-copter integrators. Our solution to the problem involved: I. Selecting, and building a consumer level quadcopter that would  be easily customizable for testing II. Designing a camera that will connect directly to the sightline hardware, distribute power, and facilitate communication III. Research and development of documentation and software to meet plug and play expectations. The selection, build, and testing of a custom quadcopter is a complicated task with many variables. GPS signal degradation made indoor flight tests impossible, and safe outdoor testing locations were hard to find. We did successfully build, and autonomously fly the Pixhawk 4 controlled quadcopter using QGroundControl mission planning software. In the meantime, a camera for the SightLine hardware was designed utilizing an AR0134CS optical sensor. The camera board was also designed to provide power distribution, and facilitate communication between the Pixhawk 4 flight controller and the SightLine hardware.
+SightLine Applications has developed a precision visual landing aid for UAV's. The Landing Aid supports autonomous landing operations by automatically finding and tracking an easy to place landing pattern. Integration of the SightLine Landing Aid for end users is problematic.  Often drone operators want to just “plug in” a component and fly their mission.  Installing software components is acceptable, but any requirement for programming is a barrier to entry or a complete show stopper.  Various cables, power, and other electrical connectivity issues are also difficult for vehicle integrators.  Rugged or at least robust mechanical enclosures, easy mounting, and environmental reliability are equally important.  Lastly, choice of optical system (camera) for the greatest range has cause adoption delays in that it has been a decision left to the integrator. Recognizing the needs from the end-users, Sightline wants to develop a plug and play precision landing aid for UAVs and expect that this new project will be highly valuable to a wide range of multi-copter integrators.
+\\
+ Our solution to the problem involves: I. Selecting, and building a consumer level quadcopter that will  be easily customizable for testing II. Designing a camera that will connect directly to the SightLine hardware, distribute power, and facilitate communication III. Research and development of documentation and software to meet plug and play expectations.
+\\
+ The selection, build, and testing of a custom quadcopter is a complicated task with many variables. GPS signal degradation made indoor flight tests impossible, and safe outdoor testing locations were hard to find. We did successfully build, and autonomously fly the Pixhawk 4 controlled quadcopter using QGroundControl mission planning software. In the meantime, a camera for the SightLine hardware was designed utilizing an AR0134CS optical sensor. The camera board was also designed to provide power distribution, and facilitate communication between the Pixhawk 4 flight controller and the SightLine hardware.
 
 *Insert Hardware Test Results summary Here*
 
