--- a/Final Documentation/Design Report/2019_ECECapstone_Team21.tex
+++ b/Final Documentation/Design Report/2019_ECECapstone_Team21.tex
@@ -139,10 +139,12 @@ Integration of the SightLine Landing Aid for end users is problematic for two ma
 \end{enumerate} 
 
 Currently the end user selects a camera to be used with the SightLine processing hardware. A wide range of cameras must be supported, and custom AB boards must be designed for each one to interface with the SightLine hardware. Each of these AB boards can have cable, power, and electrical connectivity issues that are problematic for the end user.
-There is also a wide range of flight controller hardware and software, each with a myriad of different communication protocols. Installing software components to facillitate this communication is fine for the end user, but if any programming needs to be done this is usually a complete show stopper. The proposed solution to these problems is to develop an all in one unit with plug and play capabilities that can be directly connected to a consumer level flight controller. By doing so camera connectivity and selection problems are eliminated, and communication and software deployment are made much easier for the end user.
+There is also a wide range of flight controller hardware and software, each with a myriad of different communication protocols. Installing software components to facillitate this communication is fine for the end user, but if any programming needs to be done this is usually a complete show stopper. 
 
 \subsection{Solution}
 
+The proposed solution to these problems is to develop an all in one unit with plug and play capabilities that can be directly connected to a consumer level flight controller. By doing so camera connectivity and selection problems are eliminated, and communication and software deployment are made much easier for the end user.
+\\
 The project is divided into three sections:
 \begin{enumerate}
  \item Choosing and building an "off the shelf" quadcopter that uses a Pixhawk 4 flight controller that can be used for testing
