Update Design Report

--- a/Final Documentation/Design Report/2019_ECECapstone_Team21.tex
+++ b/Final Documentation/Design Report/2019_ECECapstone_Team21.tex
@@ -97,7 +97,7 @@ SightLine Applications has developed a precision visual landing aid for UAV's. T
 \\
  The selection, build, and testing of a custom quadcopter is a complicated task with many variables. GPS signal degradation made indoor flight tests impossible, and safe outdoor testing locations were hard to find. We did successfully build, and autonomously fly the Pixhawk 4 controlled quadcopter using QGroundControl mission planning software. In the meantime, a camera for the SightLine hardware was designed utilizing an AR0134CS optical sensor. The camera board was also designed to provide power distribution, and facilitate communication between the Pixhawk 4 flight controller and the SightLine hardware.
 
-*Insert Hardware Test Results summary Here*
+*Insert SLA1500CAM Test Results summary Here*
 
 *Insert Software Results summary Here*
 
@@ -143,19 +143,23 @@ There is also a wide range of flight controller hardware and software, each with
 
 \subsection{Solution}
 
-The proposed solution to these problems is to develop an all in one unit with plug and play capabilities that can be directly connected to a consumer level flight controller. By doing so camera connectivity and selection problems are eliminated, and communication and software deployment are made much easier for the end user.
-\\
+The proposed solution to these problems is to develop an all in one unit (SightLine Hardware + Camera) with plug and play capabilities that can be directly connected to a consumer level flight controller. By doing so camera connectivity and selection problems are eliminated, and communication and software deployment are made much easier for the end user. We will build an off the shelf quadcopter with autonomous flight capabilities to test communication between current SightLine hardware, and our newly designed camera interface.
+
+\subsection{Project Management}
+
 The project is divided into three sections:
 \begin{enumerate}
  \item Choosing and building an "off the shelf" quadcopter that uses a Pixhawk 4 flight controller that can be used for testing
  \item Designing a camera based on the On-Semi AR0134CS optical sensor that connects directly to the SightLine hardware, distributes power, and facilitates communication  between the flight controller and SightLine hardware
  \item Research and development of documentation and software installers to meet plug and play expectations using QGroundControl flight control and mission planning software
 \end{enumerate}
+*Insert Project Roles and Responsibilities here*
+
+\subsubsection{Project Timeline}
+
+*Insert Project Timeline here*
 
 
-\subsubsection{Quadcopter}
-\subsubsection{Hardware}
-\subsubsection{Software}
 
 
 
