Update final documentation

--- a/Final Documentation/Design Report/2019_ECECapstone_Team21.tex
+++ b/Final Documentation/Design Report/2019_ECECapstone_Team21.tex
@@ -143,7 +143,7 @@ There is also a wide range of flight controller hardware and software, each with
 
 \subsection{Solution}
 
-The proposed solution to these problems is to develop an all in one unit (SightLine Hardware + Camera) with plug and play capabilities that can be directly connected to a consumer level flight controller. By doing so camera connectivity and selection problems are eliminated, and communication and software deployment are made much easier for the end user. We will build an off the shelf quadcopter with autonomous flight capabilities to test communication between current SightLine hardware, and our newly designed camera interface.
+The proposed solution to these problems is to develop an all in one unit (SightLine Hardware w/Camera) with plug and play capabilities that can be directly connected to a consumer level flight controller. By doing so camera connectivity and selection problems are eliminated, and communication and software deployment are made much easier for the end user. We will build an off the shelf quadcopter with autonomous flight capabilities to test communication between current SightLine hardware, and our newly designed camera interface.
 
 \subsection{Project Management}
 
