Update Design Report

--- a/Final Documentation/Design Report/2019_ECECapstone_Team21.tex
+++ b/Final Documentation/Design Report/2019_ECECapstone_Team21.tex
@@ -43,7 +43,7 @@
 	\textsc{\LARGE2019  ECE Capstone }\\[0.12cm] % Minor heading such as course title
 	\textsc{\LARGE Team 21 }\\[0.12cm]	
 		\textsc{\Large Faculty Advisor: Roy Kravitz, M.S. }\\[0.12cm]
-		\textsc{\Large Sponsor: Sightline Applications }\\[1cm]
+		\textsc{\Large Sponsor: Jeremy Sarao, Sightline Applications }\\[1cm]
 	
 	%------------------------------------------------
 	%	Title
