--- a/Final Documentation/Design Report/2019_ECECapstone_Team21.tex
+++ b/Final Documentation/Design Report/2019_ECECapstone_Team21.tex
@@ -99,11 +99,13 @@ SightLine Applications has developed a precision visual landing aid for UAV's. T
 
 *Insert SLA1500CAM Test Results summary Here*
 
-*Insert Software Results summary Here*
-
-*What are the limitations?*
+Based on our project, the Qgroundcontrol has demonstrated a great ability to control our quadcopter autonomously. The Qgroundcontrol provides the ability to fully control all quadcopter parameters and as well as setting up a mission. We have succesfully flied the drone autonomously using Qgroundcontrol includes takeoff, land, fly the mission, and return to land. The precision landing feature on Qgroundcontrol is not very promising. For the simple function like takeoff and landing, the position between takeoff and land was about 1 meter. For the flying to a destination and return, the difference in position was 2 meter. Additionally, before doing the flight test, we also use Mission Planner to simulate the flight and learn how to control the quadcopter's parameters.
+   
+*What are the limitations?
+The limitation comes from both Qgroundcontrol and Sightline hardware. Since Sightline hardware, or 1500-SLA-kit, is unable to talk with Qgroundcontrol and as well as, we don't know if Qgroundcontrol is capable of talking to Sightline hardware. There will be some works that Sightline need to be done with their hardware  so it will be able to talk with Qgroundcontrol.  
 
 *What are the Future implications of the project?*
+The project is now divided into two parts. The first part is understand the Ground Control State software (Qgroundcontrol) and hardware  such as Pixhawk 4, and SLA-CAM. The second part will emphasize in software and communication development. Sightline and our team has determined to leave the second part of the project for the future capstone team. With our achievements on this project, we have a strong belief that the future team will be succesful in this project and future function developemnt.
 
 \pagebreak
 
