Update Desing Report

--- a/Final Documentation/Design Report/2019_ECECapstone_Team21.tex
+++ b/Final Documentation/Design Report/2019_ECECapstone_Team21.tex
@@ -185,9 +185,9 @@ The project is divided into three sections:
 
 \subsection{Hardware}
 
-For this project we developed the SLA1500CAM. The SLA1500CAM is a camera that utilizes an On-Semi AR0134CS optical sensor, connects seamlessly with the SLA1500OEM via a 50-pin Hirose DF12B connector, and provides additional power and communication IO. The schematic and PCB were designed using EAGLE CAD 9.2.1. Many of the component devices, and footprints were unavailable and were designed specifically for the project. The entire EAGLE library can be found in the GitHub repository *HERE*. 
+For this project we developed the SLA1500CAM. The SLA1500CAM is a camera that utilizes an On-Semi AR0134CS optical sensor, connects seamlessly with the SLA1500OEM via a 50-pin Hirose DF12B connector, and provides additional power and communication IO. The schematic and PCB were designed using EAGLE CAD 9.2.1. Many of the component devices, and footprints were unavailable and were designed specifically for the project. The entire EAGLE library can be found in the GitHub repository.
 
-\href{https://www.wikibooks.org}{Wikibooks home}
+\href{https://github.com/phamtaiece/Capstone-Sightline/tree/master/EAGLE\%20files/Library}{Eagle Library for SLA1500CAM}
 
     \begin{figure}[H]
 	\centering	
